# rpi_server

./: Cargo.toml
src/: config_handler.rs  lib.rs  main.rs  network_device.rs  network_devices_handler.rs  not_found.rs  settings.conf
src/errors/: execution_error.rs  mod.rs
src/handlers/: mod.rs
src/handlers/config_handler/: endpoints.rs  function.rs  mod.rs  model.rs
src/handlers/network_devices_handler/: endpoints.rs  function.rs  model.rs
src/objects/: mod.rs
src/objects/device/: function.rs  mod.rs  model.rs
src/objects/interface/: model.rs
src/objects/vlan/: function.rs  model.rs
src/templates/: not-found.html
tests/: health_check.rs
